--- a/StorageTest/StorageTest/FileManagerViewController.xib
+++ b/StorageTest/StorageTest/FileManagerViewController.xib
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1611" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FileManagerViewController" customModule="StorageTest" customModuleProvider="target">
@@ -14,12 +18,12 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="ほげほげ" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="p7V-hR-7xP">
-                    <rect key="frame" x="0.0" y="180" width="600" height="420"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <rect key="frame" x="0.0" y="247" width="375" height="420"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="479" id="MBB-rM-DYX"/>
                     </constraints>
@@ -31,34 +35,35 @@
                         </mask>
                     </variation>
                 </textView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Ym-5G-eZy">
-                    <rect key="frame" x="330" y="74" width="83" height="30"/>
+                <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="41M-Ln-GWc">
+                    <rect key="frame" x="0.0" y="89" width="375" height="150"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="83" id="er0-ha-DY7"/>
+                        <constraint firstAttribute="height" constant="150" id="P9W-Ln-jog"/>
+                    </constraints>
+                </pickerView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Ym-5G-eZy">
+                    <rect key="frame" x="16" y="57" width="102" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="Sgc-90-T65"/>
+                        <constraint firstAttribute="width" constant="102" id="TzH-wg-AsY"/>
                     </constraints>
                     <state key="normal" title="Test"/>
                     <connections>
                         <action selector="testButtonTapped:" destination="-1" eventType="touchUpInside" id="pfC-Q4-yWW"/>
                     </connections>
                 </button>
-                <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="41M-Ln-GWc">
-                    <rect key="frame" x="0.0" y="22" width="265" height="150"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="150" id="NED-6y-b1U"/>
-                        <constraint firstAttribute="width" constant="265" id="lLx-0Z-4a8"/>
-                    </constraints>
-                </pickerView>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="41M-Ln-GWc" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="22" id="Gjp-JT-AuP"/>
-                <constraint firstItem="p7V-hR-7xP" firstAttribute="top" secondItem="41M-Ln-GWc" secondAttribute="bottom" constant="8" symbolic="YES" id="KcE-iX-smH"/>
-                <constraint firstItem="p7V-hR-7xP" firstAttribute="top" secondItem="0Ym-5G-eZy" secondAttribute="bottom" constant="76" id="V3x-GX-BtC"/>
-                <constraint firstItem="41M-Ln-GWc" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="e6S-m0-Wmw"/>
-                <constraint firstItem="p7V-hR-7xP" firstAttribute="leading" secondItem="41M-Ln-GWc" secondAttribute="leading" id="gR6-iB-Sor"/>
-                <constraint firstItem="0Ym-5G-eZy" firstAttribute="leading" secondItem="41M-Ln-GWc" secondAttribute="trailing" constant="65" id="iQf-ba-z2s"/>
-                <constraint firstAttribute="trailing" secondItem="p7V-hR-7xP" secondAttribute="trailing" id="oFf-zz-CZ6"/>
-                <constraint firstAttribute="bottom" secondItem="p7V-hR-7xP" secondAttribute="bottom" id="xWp-mm-vbW"/>
+                <constraint firstAttribute="trailing" secondItem="41M-Ln-GWc" secondAttribute="trailing" id="0X4-bI-AXr"/>
+                <constraint firstItem="p7V-hR-7xP" firstAttribute="top" secondItem="41M-Ln-GWc" secondAttribute="bottom" constant="8" id="DY6-E4-Nzu"/>
+                <constraint firstItem="41M-Ln-GWc" firstAttribute="top" secondItem="0Ym-5G-eZy" secondAttribute="bottom" constant="2" id="FGK-tW-4Yd"/>
+                <constraint firstItem="0Ym-5G-eZy" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="57" id="MST-cy-y4w"/>
+                <constraint firstAttribute="trailing" secondItem="p7V-hR-7xP" secondAttribute="trailing" id="NUq-rk-YrS"/>
+                <constraint firstItem="0Ym-5G-eZy" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="16" id="S6U-uV-X9Q"/>
+                <constraint firstItem="41M-Ln-GWc" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="nOe-BI-unv"/>
+                <constraint firstItem="p7V-hR-7xP" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="pGT-d7-zSc"/>
+                <constraint firstAttribute="bottom" secondItem="p7V-hR-7xP" secondAttribute="bottom" id="yQB-LP-7Yr"/>
                 <constraint firstItem="p7V-hR-7xP" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="zWc-5t-XEz"/>
             </constraints>
             <variation key="default">
@@ -66,6 +71,7 @@
                     <exclude reference="zWc-5t-XEz"/>
                 </mask>
             </variation>
+            <point key="canvasLocation" x="3.5" y="-59.5"/>
         </view>
     </objects>
 </document>
