--- a/TestNavigationVC/TestNavigationVC/ViewController.xib
+++ b/TestNavigationVC/TestNavigationVC/ViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1611" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -18,7 +18,23 @@
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OQg-ZG-iiy">
+                    <rect key="frame" x="154" y="137" width="67" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="AK3-Q5-Koh"/>
+                    </constraints>
+                    <state key="normal" title="new page"/>
+                    <connections>
+                        <action selector="newPaegButtonClicked:" destination="-1" eventType="touchUpInside" id="EwX-Tc-sBb"/>
+                    </connections>
+                </button>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="OQg-ZG-iiy" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="gO3-0l-qqF"/>
+                <constraint firstItem="OQg-ZG-iiy" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="137" id="oFF-I3-3Sx"/>
+            </constraints>
         </view>
     </objects>
 </document>
