--- a/ViewController/ViewController/ViewController2.xib
+++ b/ViewController/ViewController/ViewController2.xib
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1611" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ViewController2" customModule="ViewController" customModuleProvider="target">
@@ -12,34 +16,34 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YBt-Vp-QXL">
-                    <rect key="frame" x="200.5" y="85" width="200" height="30"/>
+                    <rect key="frame" x="87.5" y="85" width="200" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="200" id="Ym6-zO-coP"/>
                     </constraints>
                     <state key="normal" title="push View1">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <connections>
-                        <action selector="page1ButtonDidTap:" destination="-1" eventType="touchUpInside" id="k5N-U2-QYQ"/>
+                        <action selector="page1ButtonDidTapWithSender:" destination="-1" eventType="touchUpInside" id="ELC-EK-2Eu"/>
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ix7-4g-Bke">
-                    <rect key="frame" x="200" y="143" width="200" height="30"/>
+                    <rect key="frame" x="87.5" y="143" width="200" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="6k2-La-8k6"/>
                         <constraint firstAttribute="width" constant="200" id="ItC-xc-hK4"/>
                     </constraints>
                     <state key="normal" title="popToRoot"/>
                     <connections>
-                        <action selector="popToRootButtonTapped:" destination="-1" eventType="touchUpInside" id="XZ5-uV-daI"/>
+                        <action selector="popToRootButtonTappedWithSender:" destination="-1" eventType="touchUpInside" id="2fh-0d-9BE"/>
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" red="0.95350215517241377" green="0.94609374999999996" blue="0.17047413793103419" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" red="0.95350215517241377" green="0.94609374999999996" blue="0.17047413793103419" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="centerX" secondItem="YBt-Vp-QXL" secondAttribute="centerX" id="2TI-fS-R5I"/>
                 <constraint firstItem="Ix7-4g-Bke" firstAttribute="top" secondItem="YBt-Vp-QXL" secondAttribute="bottom" constant="28" id="IFD-HW-XRx"/>
