--- a/StorageTest/StorageTest/FileManagerViewController.xib
+++ b/StorageTest/StorageTest/FileManagerViewController.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FileManagerViewController" customModule="StorageTest" customModuleProvider="target">
             <connections>
-                <outlet property="testPicker" destination="41M-Ln-GWc" id="JKa-2b-OIM"/>
+                <outlet property="tableView1" destination="Hki-gV-JEm" id="IqU-rI-RcT"/>
                 <outlet property="textView1" destination="p7V-hR-7xP" id="d2x-ia-4Hc"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -22,7 +22,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="ほげほげ" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="p7V-hR-7xP">
-                    <rect key="frame" x="0.0" y="247" width="375" height="420"/>
+                    <rect key="frame" x="0.0" y="275" width="375" height="392"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="479" id="MBB-rM-DYX"/>
@@ -35,33 +35,25 @@
                         </mask>
                     </variation>
                 </textView>
-                <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="41M-Ln-GWc">
-                    <rect key="frame" x="0.0" y="89" width="375" height="150"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Hki-gV-JEm">
+                    <rect key="frame" x="0.0" y="20" width="375" height="247"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="150" id="P9W-Ln-jog"/>
+                        <constraint firstAttribute="height" constant="247" id="90v-1o-2ki"/>
                     </constraints>
-                </pickerView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Ym-5G-eZy">
-                    <rect key="frame" x="16" y="57" width="102" height="30"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="30" id="Sgc-90-T65"/>
-                        <constraint firstAttribute="width" constant="102" id="TzH-wg-AsY"/>
-                    </constraints>
-                    <state key="normal" title="Test"/>
                     <connections>
-                        <action selector="testButtonTapped:" destination="-1" eventType="touchUpInside" id="pfC-Q4-yWW"/>
+                        <outlet property="dataSource" destination="-1" id="k9q-Oq-Djm"/>
+                        <outlet property="delegate" destination="-1" id="ebO-uE-gOH"/>
                     </connections>
-                </button>
+                </tableView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="41M-Ln-GWc" secondAttribute="trailing" id="0X4-bI-AXr"/>
-                <constraint firstItem="p7V-hR-7xP" firstAttribute="top" secondItem="41M-Ln-GWc" secondAttribute="bottom" constant="8" id="DY6-E4-Nzu"/>
-                <constraint firstItem="41M-Ln-GWc" firstAttribute="top" secondItem="0Ym-5G-eZy" secondAttribute="bottom" constant="2" id="FGK-tW-4Yd"/>
-                <constraint firstItem="0Ym-5G-eZy" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="57" id="MST-cy-y4w"/>
+                <constraint firstItem="Hki-gV-JEm" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="H87-ev-N3i"/>
+                <constraint firstItem="Hki-gV-JEm" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="II3-KO-90V"/>
                 <constraint firstAttribute="trailing" secondItem="p7V-hR-7xP" secondAttribute="trailing" id="NUq-rk-YrS"/>
-                <constraint firstItem="0Ym-5G-eZy" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="16" id="S6U-uV-X9Q"/>
-                <constraint firstItem="41M-Ln-GWc" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="nOe-BI-unv"/>
+                <constraint firstAttribute="trailing" secondItem="Hki-gV-JEm" secondAttribute="trailing" id="kQV-mo-oTo"/>
+                <constraint firstItem="p7V-hR-7xP" firstAttribute="top" secondItem="Hki-gV-JEm" secondAttribute="bottom" constant="8" id="kwZ-v0-N8N"/>
                 <constraint firstItem="p7V-hR-7xP" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="pGT-d7-zSc"/>
                 <constraint firstAttribute="bottom" secondItem="p7V-hR-7xP" secondAttribute="bottom" id="yQB-LP-7Yr"/>
                 <constraint firstItem="p7V-hR-7xP" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="zWc-5t-XEz"/>
